# Nitido

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py  reglas.json
backend/app/api/: routes.py
backend/app/models/: database.py  schemas.py
backend/app/services/: corpus.py  parser.py  risk_detector.py  summarizer.py
chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
data/corpus/: clausulas-abusivas.md  constitucion.md  ley-consumidor.md
docs/: ARCHITECTURE.md  ROADMAP.md
tests/: conftest.py  test_api.py  test_corpus.py  test_parser.py  test_risk_detector.py  test_summarizer.py
web/: index.html
web/css/: style.css
web/js/: app.js
