[project]
name = "nitido"
version = "0.1.0"
description = "Descifra documentos legales al español simple"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx>=0.27.0",
    "google-genai>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0",
    "pytest-asyncio",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.mypy]
strict = false
ignore_missing_imports = true
